# AI_Hackathon_Team-Harta-Tahta-Data

./: ADSS.py  README.md  pyproject.toml
