[tool.poetry]
name = "ADSS"
version = "0.1.0"
description = "Agriculture Decision Support System - ADSS"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.8.0"
streamlit-pydantic = "^0.5.0"
openai = "^0.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "python>=3.10"]
build-backend = "poetry.core.masonry.api"
